--- a/SortPix/AppShell.xaml
+++ b/SortPix/AppShell.xaml
@@ -3,12 +3,11 @@
     Title="SortPix"
     x:Class="SortPix.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:controls="clr-namespace:Microsoft.Maui.Controls;assembly=Microsoft.Maui.Controls"
     xmlns:mainPage="clr-namespace:SortPix.Pages.MainPage"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
-    
 
-    <ShellContent
-        ContentTemplate="{DataTemplate mainPage:MainPage}"
-       />
+
+    <controls:ShellContent ContentTemplate="{DataTemplate mainPage:MainPage}" />
 
 </Shell>
